# stratocaml

./: .envrc  .gitignore  README.md  dune-project  dune-workspace  stratocaml.opam
.github/workflows/: ocaml.yml
dune.lock/: alcotest.pkg  crunch.pkg  easy-format.pkg  lock.dune  melange-json-native.pkg  octavius.pkg  odoc-parser.pkg  odoc.pkg  ppx_js_style.pkg  ppx_yojson_conv.pkg  ppxlib.pkg  query-json.pkg  sedlex.pkg
golden/: dune_exec_stratocaml.txt
hooks/: pre_commit.py
lib/: dune  stratocaml.ml  terraform_state.ml
test/: complex.tfstate  dune  example.tfstate  test_stratocaml.ml  test_terraform_state.ml
